CHANGES: -WORKING ON: Summoner spells module and related translators.     TODO: create all buffs needed -WORKING ON: on_x_effects     TODO: adjust factory -WORKING ON: every_nth     movement related methods created and tested     TODO: adjust factory Fixed bug related to movement after actions (it wasn't being applied in some cases).
NOW:
Teleport must be 0 time cast but ONLY before combat starts (or deduct its cast time from combat duration).
Create optional 'disallow_on_multi_targets' in buffs and related functionality (e.g. vayne W).
Modify consistency tests to include intermediate champion switching.
Limit current hp related bonuses to dmgs/stats, since below 0 hp can cause wrong values.
Will of the ancients (along with other items and masteries) has a special healing. Create appropriate functionality.
Survivability weight factors, qss, GA, Banshees etc.
Remove unnecessary calls to req_dmg (and perhaps req_buff) and instead use parameter dmg_dct.
Make hp5 have a separate method (doran shield shouldn't get percent bonuses).
Track crit/non-crit dmg, aoe/non-aoe, create crit_reduction stat and adjust dmg methods, adjust survivability.
Create LIMITED_STATS_DCT with stats that should have a max value (e.g. 'percent_armor_pen') and related functionality.
Champion module creation needs to ask before creating new element (when it has found existing element).
Create functionality for all possible actions in palette, and insert in factory priorities choices.
Create factory functionality for adding resource used.
Dmg mods need to handle f(x). (do they?)
Make dmgs able to apply buffs or other dmgs.
New methods in buffs/dmg categories (on_hit).

LATER:
Pets with champion-like stats.
Syndra balls derive from single buff.
Mastery verification needs mastery attrs, which needs factory additions (should i really verify them?).
Allow independent actions.
Improve Kalista movement after AA (include a small delay before walking is allowed if needed).
Make modules containing api data 

--- a/gui/singleinstancetest.kv
+++ b/gui/singleinstancetest.kv
@@ -2,9 +2,12 @@
 #:kivy 1.9.0
 
 
+<HorizontalBoxLayout@BoxLayout>:
+    orientation: 'horizontal'
 
 <Items@GridLayout>:
     cols: 3
+    on_touch_up: print('hi')
     SmallButton
     SmallButton
     SmallButton
