CHANGES: -WORKING ON: Summoner spells module and related translators.     TODO: create all buffs needed -WORKING ON: on_x_effects     TODO: Test -WORKING ON: every_nth     TODO: adjust factory -WORKING ON: factory masteries     TODO: Create method that (semi)automatically suggest choices to dev based on placeholder-containing object in palette. Refactored requesting in factory. Requested all data. Created api version.
NOW:
Teleport must be 0 time cast but ONLY before combat starts (or deduct its cast time from combat duration).
Create optional 'disallow_on_multi_targets' in buffs and related functionality (e.g. vayne W).
Modify consistency tests to include intermediate champion switching.
Limit current hp related bonuses to dmgs/stats, since below 0 hp can cause wrong values.
Will of the ancients (along with other items and masteries) has a special healing. Create appropriate functionality.
Survivability weight factors, qss, GA, Banshees etc.
Remove unnecessary calls to req_dmg (and perhaps req_buff) and instead use parameter dmg_dct.
Make hp5 have a separate method (doran shield shouldn't get percent bonuses).
Track crit/non-crit dmg, aoe/non-aoe, create crit_reduction stat and adjust dmg methods, adjust survivability.
Create LIMITED_STATS_DCT with stats that should have a max value (e.g. 'percent_armor_pen') and related functionality.
Champion module creation needs to ask before creating new element (when it has found existing element).
Create functionality for all possible actions in palette, and insert in factory priorities choices.
Create factory functionality for adding resource used.
Dmg mods need to handle f(x). (do they?)
Make dmgs able to apply buffs or other dmgs.
New methods in buffs/dmg categories (on_hit).

LATER:
Pets with champion-like stats.
Syndra balls derive from single buff.
Mastery verification needs mastery attrs, which needs factory additions (should i really verify them?).
Allow independent actions.
Improve Kalista movement after AA (include

--- a/gui/newsingleinstancetest.kv
+++ b/gui/newsingleinstancetest.kv
@@ -75,26 +75,39 @@
 <PlayerExternalVariables@HorizontalBoxLayout>
 
 
+<SingleEnemySelectionWidget@DropDown>
+    Button:
+        text: 'b 1'
+    Button:
+        text: 'b 2'
+    Button:
+        text: 'b 1'
+
+
+<EnemiesNames@VerticalBoxLayout>
+    SingleEnemySelectionWidget
+
 <MainWidget>:
     do_default_tab: False
 
     TabbedPanelItem:
         text: 'General'
 
-        HorizontalBoxLayout:
-            VerticalBoxLayout:
+        VerticalBoxLayout:
+            HorizontalBoxLayout:
                 PlayerChampionAndLvl
                 PlayerItems
                 PlayerAbilitiesLvlsWidget
                 PlayerRotationPriorities
                 PlayerExternalVariables
+                EnemiesNames
 
-            VerticalBoxLayout:
+            HorizontalBoxLayout:
                 Label:
-                    text: 'vert box 2'
-            VerticalBoxLayout:
+                    text: 'horiz box 2'
+            HorizontalBoxLayout:
                 Label:
-                    text: 'vert box 3'
+                    text: 'horiz box 3'
 
     TabbedPanelItem:
         text: 'Masteries'
