--- a/gui/newsingleinstancetest.kv
+++ b/gui/newsingleinstancetest.kv
@@ -12,36 +12,77 @@
     width: 40
     height: 40
 
-<PlayerRotationPriorities@HorizontalBoxLayout>
+<PlayerRotation@VerticalBoxLayout>
+    selected_rotation: []
+    starting_text: '(no spells selected, \nrotation will be automatic)'
+    on_selected_rotation:
+        if self.selected_rotation == []: rotation_label.text = self.starting_text
+        else: rotation_label.text = str(self.selected_rotation).strip('[]').replace("'", '')
+
+    Button:
+        text: 'Clear rotation'
+        size_hint_x: 0.5
+        on_release: root.selected_rotation = []
+    HorizontalBoxLayout:
+        Button:
+            text: 'AA'
+            on_release: root.selected_rotation.append(self.text.lower())
+        Button:
+            text: 'Q'
+            on_release: root.selected_rotation.append(self.text.lower())
+        Button:
+            text: 'W'
+            on_release: root.selected_rotation.append(self.text.lower())
+        Button:
+            text: 'E'
+            on_release: root.selected_rotation.append(self.text.lower())
+        Button:
+            text: 'R'
+            on_release: root.selected_rotation.append(self.text.lower())
+    Label:
+        id: rotation_label
+        text: root.starting_text
 
 <PlayerExternalVariables@HorizontalBoxLayout>
 
 <EnemiesNames@HorizontalBoxLayout>
 
+
 <MainWidget>:
     do_default_tab: False
     id: main_widget
-    player_champion: ''
-    player_lvl: '1'
+
+    selected_champions_dct: {'player': 'jax', 'enemy_1': 'melee_creep'}
+    ability_lvls_dct: {k: 0 for k in output_testing_gui.SPELL_SHORTCUTS}
+    champion_lvls_dct: {k: 1 for k in output_testing_gui.PLAYER_AND_ENEMIES_LST}
+
+    max_combat_time: 10
+    chosen_items_dct: {k: [] for k in output_testing_gui.PLAYER_AND_ENEMIES_LST}
+    selected_summoner_spells: []
+    player_champion: self.selected_champions_dct['player']
+    on_player_champion: self.selected_champions_dct['player'] = self.player_champion
     player_items: {}
-    rotation: []
+    rotation_lst: rotation_widget.selected_rotation
     runes: {}
     masteries: {}
-    enemies_names: {}
-    skills_lvls: {}
 
-    on_server_status: server_label.text = 'Server: {}'.format(main_widget.server_status)
-    on_server_status: server_label.color = (0, 1, 0, 1) if main_widget.server_status == 'online' else (1,0,0,1)
+
+    on_server_status: server_status_label.text = 'Server: {}'.format(main_widget.server_status)
+    on_server_status: server_status_label.color = (0, 1, 0, 1) if main_widget.server_status == 'online' else (1,0,0,1)
 
     TabbedPanelItem:
         text: 'General'
 
         VerticalBoxLayout:
-            Label:
-                id: server_label
+            HorizontalBoxLayout:
                 size_hint_y: 0.1
-                text: 'Checking server status...'
-                color: (1,1,0,1)
+                Label:
+                    id: server_status_label
+                    text: 'Checking server status...'
+                    color: (1,1,0,1)
+                Label:
+                    id: server_message_label
+                    text: '(server message label placeholder)'
 
             HorizontalBoxLayout:
                 VerticalBoxLayout:
@@ -56,14 +97,14 @@
 
                                 ChampionButton:
                                     id: player_champion_button
-                                    on_text: main_widget.player_champion = self.text
+                                    on_text: main_widget.player_champion = self.text.lower()
 
                                 LvlsDropdownButton:
                                     min_max: 1, 18
                                     id: player_champion_lvl
                                     size_hint_x: None
                                     width: player_champion_button.width
-                                    on_lvl: main_widget.player_lvl = self.text
+                                    on_lvl: main_widget.champion_lvls_dct['player'] = self.lvl
                                 Label:
                                     size_hint_x: None
                                     width: player_champion_button.width
@@ -108,35 +149,29 @@
                         LvlsDropdownButton:
                             id: q_lvl_button
                             min_max: 0, 5
-                            on_lvl: main_widget.skills_lvls['q'] = self.lvl
+                            on_lvl: main_widget.ability_lvls_dct['q'] = self.lvl
                         LvlsDropdownButton:
                             id: w_lvl_button
                             min_max: 0, 5
-                            on_lvl: main_widget.skills_lvls['w'] = self.lvl
+                            on_lvl: main_widget.ability_lvls_dct['w'] = self.lvl
                         LvlsDropdownButton:
                             id: e_lvl_button
                             min_max: 0, 5
-                            on_lvl: main_widget.skills_lvls['e'] = self.lvl
+                            on_lvl: main_widget.ability_lvls_dct['e'] = self.lvl
                         LvlsDropdownButton:
                             id: r_lvl_button
                             min_max: 0, 3
-                            on_lvl: main_widget.skills_lvls['r'] = self.lvl
+                            on_lvl: main_widget.ability_lvls_dct['r'] = self.lvl
 
-
-
-                    PlayerRotationPriorities:
-                        size_hint_y: 0.1
-                    PlayerExternalVariables:
-                        size_hint_y: 0.1
+                    PlayerRotation:
+                        id: rotation_widget
                     EnemiesNames:
                         size_hint_y: 0.1
                     Button:
                         text: "DON'T PUSH \nTHIS BUTTON"
                         size_hint_x: 0.7
                         background_color: (1,0,0,1)
-                        on_release:
-                            if main_widget.server_status == 'online': root.request_results({'player_champion': main_widget.player_champion})
-                            else: print('server is offline, bro')
+                        on_release:root.request_results(params_dct=({'input_as_str': main_widget.preset_dct_as_str()}))
                     VerticalBoxLayout:
                         padding: 10
                         Button:
@@ -146,7 +181,8 @@
                             hint_text: '(extra comments)'
 
                 Image:
-                    #source: main_widget.results
+                    id: results_image
+                    source: ""
 
     TabbedPanelItem:
         text: 'Masteries'
@@ -161,9 +197,18 @@
 
     TabbedPanelItem:
         text: 'Enemies'
-        canvas.after:
-            Color:
-                rgba: (1,0,0,.5)
-            Rectangle:
-                pos: self.pos
-                size: self.size
+
+        VerticalBoxLayout:
+            Label:
+                text: 'Only a melee creep is currently available.\nIt has 0 armor and 0 mr, and deals no dmg.\n\nFight well!'
+            Label
+            Label
+
+
+<UseTheCanvasForDebugging@Label>:
+    canvas.after:
+        Color:
+            rgba: (1,0,0,.5)
+        Rectangle:
+            pos: self.pos
+            size: self.size
