CHANGES: -WORKING ON: Summoner spells module and related translators.     TODO: create all buffs needed -WORKING ON: on_x_effects     TODO: Test -WORKING ON: every_nth     TODO: adjust factory -WORKING ON: factory masteries     TODO: Create method that (semi)automatically suggest choices to dev based on     placeholder-containing object in palette. -WORKING ON: kivy test-app     TODO: Link selections to app-setup dict.                   Create summoner spells buttons.                   Populate mastery, rune, enemies tabs.                   Create graph representation. -Initial champion in kivy UI is displayed. -Created full mastery-UI (non essential functionality will be omitted). -Completed mastery creation functionality in factory (TODO: test).
NOW:
Fix guinsoo's (item changed; must change both its stats and its functionality).
Create automatic updater for 'secondary'-stats of items.
Teleport must be 0 time cast but ONLY before combat starts (or deduct its cast time from combat duration).
Create optional 'disallow_on_multi_targets' in buffs and related functionality (e.g. vayne W).
Modify consistency tests to include intermediate champion switching.
Limit current hp related bonuses to dmgs/stats, since below 0 hp can cause wrong values.
Will of the ancients (along with other items and masteries) has a special healing. Create appropriate functionality.
Survivability weight factors, qss, GA, Banshees etc.
Remove unnecessary calls to req_dmg (and perhaps req_buff) and instead use parameter dmg_dct.
Make hp5 have a separate method (doran shield shouldn't get percent bonuses).
Track crit/non-crit dmg, aoe/non-aoe, create crit_reduction stat and adjust dmg methods, adjust survivability.
Create LIMITED_STATS_DCT with stats that should have a max value (e.g. 'percent_armor_pen') and related functionality.
Champion module creation needs to ask before creating new element (when it has found existing element).
Create functionality for all possible actions in palette, and in

--- a/gui/newsingleinstancetest.kv
+++ b/gui/newsingleinstancetest.kv
@@ -181,17 +181,26 @@
                         TextInput:
                             hint_text: '(extra comments)'
 
-                Image:
+                AsyncImage:
                     id: results_image
-                    source: ""
+                    on_source: print('yyyyy')
 
     TabbedPanelItem:
         text: 'Masteries'
-        HorizontalBoxLayout:
-            VerticalBoxLayout:
+        VerticalBoxLayout:
+            MasteriesWidget:
+                padding: 30
+                id: masteries_widg
+            AnchorLayout:
+                size_hint_y: 0.2
+                anchor_x: 'center'
+                Button:
+                    size_hint: None, None
+                    height: 40
+                    width: 200
+                    text: 'clear all'
+                    on_release: masteries_widg.reset_masteries_lvls()
 
-            VerticalBoxLayout
-            VerticalBoxLayout
 
     TabbedPanelItem:
         text: 'Runes'
